# segugio-assistant

./: .gitignore  README.md  pyproject.toml
public/: theme.json
src/info_segugio/: __init__.py  config.py  prompts.py
